--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,25 +1,24 @@
 <fa-app class="full-screen">
 
-  <!-- Container modifier, which we're rotating over the y axis -->
-  <fa-modifier fa-origin="[.5, .5]" fa-rotate-y="rotateY.get()">
+  <fa-grid-layout fa-options="layoutOptions">
+    <fa-view>
+          <!-- Container modifier, which we're rotating over the y axis -->
+          <fa-modifier fa-origin="[.5, .5]" fa-rotate-y="rotateY.get()">
+            <!-- Front face -->
+            <fa-surface fa-size="[true, true]" fa-color="'rgb(193,0,29)'">
+                <div class="questionmark">?</div>
+            </fa-surface>
+          </fa-modifier>
+    </fa-view>
+    <fa-view>
+      <fa-grid-layout fa-options="answersLayoutOptions">
+        <fa-view ng-repeat="view in sequence">
+          <fa-surface class="answer" fa-click="answer($event, view.id)">
+            <div class="center-box" ng-bind="view.title"></div>
+          </fa-surface>
+        </fa-view>
+      </fa-grid-layout>
+    </fa-view>
+  </fa-grid-layout>
 
-    <!-- Front face -->
-    <fa-surface fa-size="[true, true]" fa-color="'rgb(255,255,250)'">
-      <img class="logo" src="images/famous-logo.svg" style="width: 200px; height: 200px;"/>
-    </fa-surface>
-
-    <!-- Back face:  same image, rotated pi radians -->
-    <fa-modifier fa-rotate-y="3.14159">
-      <fa-surface fa-size="[true, true]" fa-color="'rgb(255,255,250)'">
-        <img class="logo" src="images/famous-logo.svg" style="width: 200px; height: 200px;" />
-      </fa-surface>
-    </fa-modifier>
-
-  </fa-modifier>
-
-  <fa-modifier fa-origin="[.5, .9]" fa-size="[200, 100]">
-    <fa-surface>
-      <input style="width: 100%; text-align: center;" type="range" min="10" max="100" ng-model="spinner.speed" />
-    </fa-surface>
-  </fa-modifier>
 </fa-app>
