--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,22 +1,58 @@
 body {
-    margin: 0;
-    font-family: sans-serif;
+  margin: 0;
+  font-family: 'Oswald', sans-serif;
+  font-size: 24px;
 }
 
 .center-box {
-    padding: 15px 50px 15px 50px;
-    text-align: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  display: table;
+  height: auto;
+  width: 100%;
 }
 
-.logo {
+.famous-surface {
   backface-visibility: visible;
   -webkit-backface-visibility: visible;
 }
 
 .full-screen {
-    position: fixed;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.question {
+  background-color: #999999;
+  color: #fff;
+}
+
+.questionmark {
+  font-size: 8em;
+  line-height: 1.1em;
+}
+
+.questiontext {
+  line-height: 4em;
+}
+
+.answer {
+  color: #336699;
+  cursor: pointer;
+}
+
+.answer:hover {
+  color: cornflowerblue;
+}
+
+.answer:nth-child(2n) {
+  background-color: #F0F0F0;
 }
